--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.13.0",
     "jquery": "^2.1.4",
     "react": "^0.13.3",
+    "react-router": "^0.13.3",
     "underscore": "^1.8.3"
   }
 }
