--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "^2.1.4",
     "react": "^0.13.3",
     "react-router": "^0.13.3",
+    "reflux": "^0.2.8",
     "underscore": "^1.8.3"
   }
 }
